--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -3,6 +3,9 @@ title: About Page
 publish_date: July 20, 2022
 author: Michael Yogar
 excerpt: Test page for /posts/about
+tags:
+  - a tag
+  - about
 ---
 
 # Hello
