Added Layout and Header component

--- a/pages/posts/about.mdx
+++ b/pages/posts/about.mdx
@@ -8,8 +8,8 @@ tags:
   - about
 ---
 
-# Hello
+import Image from "next/image";
+import profilePic from "../../public/images/dog.jpg";
 
-## Hello
-
-### Hello
+<Image src={profilePic} alt="Profile Picture" width={300} height={300} />
+This is a picture of a dog
